# test-regression

./: .gitignore  CMakeLists.txt  README.md  log.md
.git-broken/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  index  packed-refs
.git-broken/logs/: HEAD
.git-broken/logs/refs/: stash
.git-broken/logs/refs/remotes/origin/: HEAD  master
.git-broken/objects/pack/: pack-924189567e0534ad29e5c5f66ad7aa52171bfdf9.idx
.git-broken/refs/: stash
.git-broken/refs/remotes/origin/: master
analysis/: gather_data.py  legacy_multifit_cpu.txt  legacy_multifit_gpu.txt  multifit_cpu.txt  multifit_cpu_swap.txt  multifit_gpu.txt  multifit_gpu_swap.txt  output_cpu.root  output_gpu.root  plot.py  run_collect.py
analysis/cpu_i7-4770K_gpu_TeslaK40c/: legacy_multifit_gpu.csv
analysis/cpu_i7-4770K_gpu_V100/: legacy_multifit_cpu.csv  legacy_multifit_gpu_v100.csv  multifit_cpu.csv  multifit_gpu_teslaK40c.csv  multifit_gpu_v100.csv  plot_metrics.ipynb
analysis/results not optimized mm/: legacy_multifit_cpu.txt  multifit_gpu_swap.txt
analysis/results optimized mm/: legacy_multifit_gpu.txt  multifit_cpu.txt  multifit_gpu_swap.txt
cmake/modules/: FindVTune.cmake
data/: mysample_1000_0.000_0.000_10_25.00_10.00_0.00_1.000_1.00_CRRC43_0.00_slew_1.00.root  mysample_100_0.000_0.000_10_25.00_10.00_0.00_1.000_1.00_CRRC43_0.00_slew_1.00.root  test_out  test_out.root
debug/: CMakeCache.txt  Makefile  cmake_install.cmake
debug/multifit_cpu/: Makefile  cmake_install.cmake
debug/multifit_cpu_v2/: Makefile  cmake_install.cmake
debug/multifit_gpu/: Makefile  cmake_install.cmake
debug/multifit_ocl/: Makefile  cmake_install.cmake  ocl_test
debug/nnls_cpu/: Makefile  cmake_install.cmake
debug/nnls_gpu/: Makefile  cmake_install.cmake
fpga_reports/fnnls_channels_pass_thru_channels/reports/lib/: report_data.js
fpga_reports/fnnls_channels_pass_thru_channels/reports/lib/json/: area.json  area_src.json  info.json  lmv.json  loops.json  mav.json  summary.json  warnings.json
fpga_reports/fnnls_channels_pass_thru_channels_unroll1/reports/lib/: report_data.js
fpga_reports/fnnls_channels_pass_thru_channels_unroll1/reports/lib/json/: area.json  area_src.json  info.json  lmv.json  loops.json  mav.json  summary.json  warnings.json
fpga_reports/fnnls_original/full_compilation/reports/lib/: report_data.js
fpga_reports/fnnls_original/reports/lib/: report_data.js
fpga_reports/fnnls_original/reports/lib/json/: area.json  (+6 more)
fpga_reports/inplace_fnnls_original/reports/lib/: report_data.js
fpga_reports/ndrange/lib/json/: area.json  area_src.json  loops.json  mav.json
fpga_reports/swi_unroll_loop_coalesce_try_fix_warnings_remove_swap_loops_try_remove_stalls_inline_local_ivdep/reports/lib/: report_data.js
io/: CMakeLists.txt
io/interface/: 1  ecal_data_io.h
io/src/: 1  ecal_data_io.cpp
legacy_multifit_cpu/: CMakeLists.txt
legacy_multifit_cpu/interface/: Pulse.h  PulseChiSqSNNLS.h
legacy_multifit_cpu/src/: .PulseChiSqSNNLS.cpp.swp  PulseChiSqSNNLS.cpp  multifit.cpp
legacy_multifit_gpu/: CMakeLists.txt
legacy_multifit_gpu/interface/: DeviceData.h  PulseChiSqSNNLS.h  PulseChiSqSNNLSWrapper.h
legacy_multifit_gpu/src/: PulseChiSqSNNLS.cpp  PulseChiSqSNNLS.cu  PulseChiSqSNNLSWrapper.cu  multifit.cpp
linalgebra/: CMakeLists.txt
linalgebra/interface/: cholesky.hpp  common.hpp  fused_cholesky_substitution.hpp  fused_cholesky_substitution_with_eigen.hpp  substitution.hpp
linalgebra/src/: .cholesky.cpp.swp  .inplace_fnnls.cu.swp  cholesky.cpp
linalgebra/tests/: generate_and_test.cpp  generate_and_test_fused_impl.cpp  test_cholesky.cpp  test_cholesky_with_solvers.cpp
multifit_cpu/: CMakeLists.txt
multifit_cpu/interface/: .Pulse.h.swp  PulseChiSqSNNLS.h
multifit_cpu/src/: .gen_data.cpp.swp  PulseChiSqSNNLS.cpp  multifit.cpp
multifit_cpu_v2/: CMakeLists.txt
multifit_cpu_v2/interface/: PulseChiSqSNNLS.h  nnsl.h
multifit_cpu_v2/src/: PulseChiSqSNNLS.cpp  multifit.cpp
multifit_gpu/: CMakeLists.txt
multifit_gpu/asm/: gpu_asm_cuobj.asm  gpu_asm_dump.asm  kernel_asm.asm
multifit_gpu/interface/: DeviceData.h  EigenMatrixTypes.h  GPUPulseChiSqSNNLS.h  Pulse.h  PulseChiSqSNNLS.h  PulseChiSqSNNLSWrapper.h
multifit_gpu/src/: GPUPulseChiSqSNNLS.cu  PulseChiSqSNNLS.cpp  PulseChiSqSNNLS.cu  PulseChiSqSNNLSWrapper.cu  multifit.cpp  test_kernel.cu
multifit_ocl/: CMakeLists.txt  main.cpp  main_old.cpp
multifit_ocl/device/: README.md  fnnls_channels_pass_thru_channels.cl  fnnls_channels_pass_thru_global.cl  fnnls_nochannels.cl  fnnls_original.cl  fnnsl_channels.cl  matrix_vector_product.cl  regression_df_attempt.cl  regression_inplace_fnnls.cl  regression_inplace_fnnls_v1.cl
multifit_ocl/include/: cl_pretty_print.hpp  inplace_fnnls.h
multifit_ocl/kernels/: matrix_mult.cl
multifit_ocl/src/: cl_pretty_print.cpp  test.cpp
multifit_ocl/tests/: fnnls_original_host.cpp  inplace_fnnls_host.cpp  inplace_fnnls_original_host.cpp  main.cpp  test_cpu_inplace_fnnsl.cpp  vector_add.cpp
multifit_ocl/utils/: CMakeLists.txt  aocl_utils.h
multifit_ocl/utils/src/: opencl.cpp  options.cpp
nnls/: CMakeLists.txt  nnls.cpp  nnsl.h
nnls/interface/: data_types.h  eigen_nnls.h  fnnls.h  inplace_fnnls.h  inplace_fnnls_test_cholesky.h  kernel_wrapper.h  nnls.h  nnsl.h
nnls/src/: fnnls.cpp  fnnls.cu  inplace_fnnls.cu  inplace_fnnls_test_cholesky.cu  kernel_wrapper.cu  main.cpp  nnls.cpp
nnls_cpu/: CMakeLists.txt
nnls_cpu/interface/: data_types.h  eigen_nnls.h  fnnls.h  inplace_fnnls.h  nnls.h
nnls_cpu/src/: .nnls.cpp.swp  1  fnnls.cpp  inplace_fnnls.cpp  inplace_fnnls.cu  main.cpp  nnls.cpp
nnls_gpu/: CMakeLists.txt
nnls_gpu/interface/: data_types.h  eigen_nnls.h  fnnls.h  kernel_wrapper.h  kernels.h  nnls.h  test.h  test_wrapper.h  vector.h
nnls_gpu/src/: fnnls.cpp  fnnls.cu  helper.cu  kernel_wrapper.cu  kernels.cu  main.cpp  nnls.cpp  nnls.cu  test.cu  test_wrapper.cu
plot/: README.md  plotPulseInput.cxx  plotPulseOutput.cxx
test_cl/: 1  accums.cl  channels.cl  pipes.cl
test_nnls_cpu/: CMakeLists.txt  main.cpp  test_io.cpp
tests/: CMakeLists.txt  test_gpu_main.cpp
(+20 files in other folders)
