if(PROFILE)
# set(VTune_DIR "/cvmfs/projects.cern.ch/intelsw/psxe/linux/x86_64/2018/vtune_amplifier_2018.3.0.558279/bin64")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --std=c++17 -O2 -g")
    find_package(VTune REQUIRED)
    include_directories(${VTUNE_INCLUDE_DIR})
    set(CMAKE_CXX_COMPILER "/cvmfs/projects.cern.ch/intelsw/psxe/linux/x86_64/2018/compilers_and_libraries_2018.2.199/linux/bin/intel64/icpc") 
    set(CMAKE_C_COMPILER "/cvmfs/projects.cern.ch/intelsw/psxe/linux/x86_64/2018/compilers_and_libraries_2018.2.199/linux/bin/intel64/icc") 
    set(EIGEN_HOME "/data/user/vkhriste/eigen/eigen")
    add_definitions(-DPROFILE)
endif()

add_executable(multifit_cpu src/multifit.cpp src/PulseChiSqSNNLS.cpp)
target_link_libraries(multifit_cpu nnls ${ROOT_LIBRARIES} ${VTUNE_LIBRARIES})
