if (CUDA_FOUND)
    file(GLOB CUSOURCES src/*.cu)
    set(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS} --expt-relaxed-constexpr")
    cuda_add_library(nnls_kernels ${CUSOURCES})
    target_link_libraries(nnls_kernels)
    endif()
    
file (GLOB SOURCES src/*.cpp)
add_library(nnls_cpu STATIC ${SOURCES})
target_link_libraries(nnls_cpu ${CUDA_LIBRARIES} nnls_kernels)    
